2015-11-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r23817, r23825 and r23846.

	* src/gsad.c (init_validator): Add radius form related parameters. Add
	auth_method parameter. Remove enable_ldap_connect parameter.

	* src/gsad_omp.c (create_user_omp): Add support for radius_connect
	authentication method.
	(save_user_omp): Support RADIUS authentication method. Improve code
	style.
	(save_auth_omp): Adjust to handle RADIUS Authentication form too.

	* src/html/classic/omp.xsl (html-users-table, html-create-user-form, user)
	(user [details], user [edit]): Add RADIUS authentication support and
	adjust interface accordingly.
	(group [auth]): Change mode name to ldapauth.
	(group [radiusauth]): New template.
	(describe_auth_response [show]): Handle method:radius_connect case too.

2015-11-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backport r23787.

	* src/gsad.c (exec_omp_post): Changed wording for case of OMP service
	unavailable to indicate it might only be a temporary problem (which is typcially
	the case) and not indicate a severe problem.

2015-11-12  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r23776.

	Add alert method "Send", for sending the report to a TCP listener.

	* src/gsad_omp.c (append_alert_method_data): Add Send cases.

	* src/html/classic/omp.xsl (html-create-alert-form)
	(html-edit-alert-form): Add Send option.
	(alert, alert [details]): Add Send cases.

2015-10-28  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r23704.

	* src/html/classic/omp.xsl (permission [trash]): Replace link to
	resource with simple text and "in trashcan" message if the resource is
	also in the trashcan.

2015-10-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r23568.

	* src/html/classic/omp.xsl (user): Fix hiding of default action icons
	when bulk selection checkboxes are shown.

2015-10-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* ChangeLog: Add missed entry.
