@@ -1,3 +1,10 @@
+2015-11-25  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	Backport r23863.
+
+	* src/gsad.c (exec_omp_post): Also return the login form if the
+	username or password contains invalid characters.
+
 2015-11-24  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	Backport r23817, r23825 and r23846.
